# rhythm-pi

./: .gitignore  Cargo.toml  README.md  generate-all-charts.sh  mp3-wav.sh  run-charter.sh  run-client.sh  run-dev.sh  run-server.sh
charter/: Cargo.toml  README.md
charter/src/: audio.rs  beat_detection.rs  exporter.rs  frequency_filter.rs  hold_detector.rs  lane_assigner.rs  lib.rs  main.rs  quantizer.rs
client/: Cargo.toml  build-all.sh  build.rs  config.example.toml
client-server/: Cargo.toml  build-all.sh  run-dev.sh
client-server/server/assets/charts/: Paradisus-Paradoxum_bass_easy.json  Paradisus-Paradoxum_bass_expert.json  Paradisus-Paradoxum_bass_hard.json  Paradisus-Paradoxum_bass_normal.json  Paradisus-Paradoxum_drums_easy.json  Paradisus-Paradoxum_drums_expert.json  Paradisus-Paradoxum_drums_hard.json  Paradisus-Paradoxum_drums_normal.json  Paradisus-Paradoxum_lead_easy.json  Paradisus-Paradoxum_lead_expert.json  Paradisus-Paradoxum_lead_hard.json  Paradisus-Paradoxum_lead_normal.json  Paradisus-Paradoxum_vocals_easy.json  Paradisus-Paradoxum_vocals_expert.json  Paradisus-Paradoxum_vocals_hard.json  Paradisus-Paradoxum_vocals_normal.json  i walk this earth all by myself_bass_easy.json  i walk this earth all by myself_bass_expert.json  i walk this earth all by myself_bass_hard.json  i walk this earth all by myself_bass_normal.json  i walk this earth all by myself_drums_easy.json  i walk this earth all by myself_drums_expert.json  i walk this earth all by myself_drums_hard.json  i walk this earth all by myself_drums_normal.json  i walk this earth all by myself_lead_easy.json  i walk this earth all by myself_lead_expert.json  i walk this earth all by myself_lead_hard.json  i walk this earth all by myself_lead_normal.json  i walk this earth all by myself_vocals_easy.json  i walk this earth all by myself_vocals_expert.json  i walk this earth all by myself_vocals_hard.json  i walk this earth all by myself_vocals_normal.json
client-server/server/assets/songs/: Paradisus-Paradoxum.json  i walk this earth all by myself.json
client-server/server/data/: rhythm.db
client-server/src/: lib.rs  main.rs
client-server/src-client/: lib.rs  main.rs
client-server/src-server/: chart_gen.rs  hq.rs  lib.rs  main.rs
client-server/ui/: main.slint
client/.cargo/: config.toml
client/examples/: websocket_stream.rs
client/src/: audio.rs  game.rs  input.rs  lib.rs  main.rs  websocket.rs
client/ui/: main.slint
server/: .env  Cargo.toml
server/data/: rhythm.db  test_creation.db
server/src/: auth.rs  chart_gen.rs  db.rs  handlers.rs  hq_rust.rs  lib.rs  main.rs  song_watcher.rs  tests.rs  websocket.rs
src/: main.rs
web/: Cargo.toml
