[package]
name = "rhythm-pi-charter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
hound = "3"
ogg = "0.9"
vorbis = "0.1"
rustfft = "6"
ndarray = "0.16"
num-complex = "0.4"
num-traits = "0.2"
num-integer = "0.1"
thiserror = "1"

[features]
default = []
