[package]
name = "client-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.6"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "fs", "io-util"] }
tokio-tungstenite = "0.21"
futures = "0.3"
cpal = "0.17"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
ureq = { version = "2.9", features = ["json"] }
urlencoding = "2.1"
rdev = "0.5"

actix-web = "4"
actix-files = "0.6"
actix-web-actors = "4"
sqlx = { version = "0.8", features = ["sqlite","runtime-tokio-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
argon2 = "0.4"
rand = "0.8"
dotenvy = "0.15"
actix-cors = "0.6"
actix = "0.13"
bytes = "1.0"
hound = "3"
rustfft = "6"
ndarray = "0.16"
num-complex = "0.4"
num-traits = "0.2"

[build-dependencies]
slint-build = "1.6"

[[bin]]
name = "client-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]