[package]
name = "rhythm-pi-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.6"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
cpal = "0.17"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
ureq = { version = "2.9", features = ["json"] }
urlencoding = "2.1"

[build-dependencies]
slint-build = "1.6"

[[bin]]
name = "rhythm-pi-client"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

